<resources>
    <string name="app_name">Tajming</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="no_account">No account? Sign up</string>
    <string name="home">Home</string>
    <string name="mileage">Mileage</string>
    <string name="time">Time</string>
    <string name="profile">Profile</string>
    <string name="start_work_time">Started working</string>
    <string name="start_break_time">Current break</string>
    <string name="start_break">Take break</string>
    <string name="start_day">Begin day</string>
    <string name="current_status">Current status</string>
    <string name="stop_time">Stop</string>
    <string name="end_day">End day</string>
    <string name="continue_day">Continue day</string>
    <string name="report">Report</string>
    <string name="hours_worked">Hours worked:</string>
    <string name="break_taken">Break taken:</string>
    <string name="overtime">Overtime</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="start_location">Start location</string>
    <string name="stop_location">Stop location</string>
    <string name="city">City</string>
    <string name="total_time_month">Total working time of the month</string>
    <string name="total_mileage_month">Total mileage of the month</string>
    <string name="new_start_time">Enter changed start time</string>
    <string name="new_end_time">Enter changed end time</string>
    <string name="new_break_time">Enter new break time</string>
    <string name="new_mileage">Enter new mileage</string>
    <string name="save_changes">Save changes</string>
    <string name="remember_user">Remember me</string>
    <string name="loading">Loading</string>
    <string name="car_registration">Car registration number eg. ABC123</string>
    <string name="distance">Distance km</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="edit_day">Edit day</string>
    <string name="month">Month</string>
    <string name="stop_break_time">Stopped break</string>
    <string name="stop_work_time">Stopped working</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>