<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!-- Header-->
    <View
        android:id="@+id/mainWave"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/ic_mainwave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textfield_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--End-of-header-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_time"
        android:layout_width="124dp"
        android:layout_height="101dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/home_button_shape"
        android:drawableTop="@drawable/ic_clock"
        android:padding="16dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainWave" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_mileage"
        android:layout_width="124dp"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/home_button_shape"
        android:drawableTop="@drawable/ic_car"
        android:padding="16dp"
        android:text="@string/mileage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainWave" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_report"
        android:layout_width="124dp"
        android:layout_height="101dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/home_button_shape"
        android:drawableTop="@drawable/ic_report"
        android:padding="16dp"
        android:text="@string/report"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_profile"
        android:layout_width="124dp"
        android:layout_height="101dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/home_button_shape"
        android:drawableTop="@drawable/ic_person"
        android:padding="16dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_mileage" />

</androidx.constraintlayout.widget.ConstraintLayout>