<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeManagerActivity">

    <ImageView
        android:id="@+id/mainWave_profileManagerActivity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/wave_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_Manager_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainWave_profileManagerActivity" />

    <TextClock
        android:id="@+id/textClock_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_main"
        android:textSize="50dp"
        android:format12Hour="kk:mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainWave_profileManagerActivity" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start_day_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_border_shape"
        android:drawableStart="@drawable/ic_play_arrow"
        android:padding="10dp"
        android:text="@string/start_day"
        android:textColor="@color/purple_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue_day_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_border_shape"
        android:drawableStart="@drawable/ic_play_arrow"
        android:padding="10dp"
        android:text="@string/continue_day"
        android:textColor="@color/purple_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start_break_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_border_shape"
        android:drawableStart="@drawable/ic_pause"
        android:padding="10dp"
        android:text="@string/start_break"
        android:textColor="@color/purple_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_stop_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/round_corner_border_shape"
        android:drawableStart="@drawable/ic_stop"
        android:padding="10dp"
        android:text="@string/end_day"
        android:textColor="@color/purple_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="current"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textClock_current_time"
        app:layout_constraintEnd_toStartOf="@+id/textClock_current_time"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainWave_profileManagerActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="time"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textClock_current_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/textClock_current_time"
        app:layout_constraintTop_toBottomOf="@+id/mainWave_profileManagerActivity" />

    <TextView
        android:id="@+id/textField_start_working_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/start_work_time"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <TextView
        android:id="@+id/textField_show_start_working_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="00:00"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textField_start_working_time"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <TextView
        android:id="@+id/textField_break_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_break_time"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_start_working_time" />

    <TextView
        android:id="@+id/textField_show_break_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:hint="00:00"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textField_break_time"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <TextView
        android:id="@+id/textField_status_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="324dp"
        android:text="@string/current_status"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />

    <TextView
        android:id="@+id/textField_show_status_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="324dp"
        android:text="day not started"
        android:textColor="@color/purple_main"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/textField_status_time"
        app:layout_constraintTop_toBottomOf="@+id/textClock_current_time" />


</androidx.constraintlayout.widget.ConstraintLayout>